<resources>
    <string name="app_name">MemoryGame</string>
    <string name="onButtonClick">onButtonClick</string>
    <string name="round">Round:</string>
    <string name="high_score">High Score:</string>
    <string name="start">Start Round</string>
    <string name="Next">Next</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="end_game">End Game</string>
    <string name="accurate">Accuracy:</string>
    <string name="error">Error Rate:</string>
    <string name="Time">Average Time per round:</string>
    <string name="completionPercentage">Completion:</string>
    <string name="rules">Rules</string>
    <string name="read_rules">Read Rules</string>
    <string name="rules_text">
        <![CDATA[
        <big>Welcome to Memory Game!</big><br/><br/><br>
        <big><b>Objective:</b></big><br/> <br>Exercise your memory retention skills by replicating sequences of button presses.<br/><br/> <br>
        <big><b>How to Play:</b></big><br/> <br>
        <b>1. Click the "Start Round" button to begin the round.</b><br/>
...
        <big><b>Statistics:</b></big><br/>
        Your average round time is recorded as you play through the game, providing insight into your performance.<br/><br/>
        <big>Get ready to challenge your memory and aim for the high score!</big>
        ]]>
    </string>
    <string name="memory_game">Memory Game</string>
    <string name="begin">Begin</string>
    <string name="clear_database">Clear Data</string>
    <string name="settings">Settings</string>
    <string name="number_of_rounds">Number of rounds:</string>
    <string name="vibrate_on_button_click">Vibrate on Button Click:  </string>

</resources>
