...
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <!-- Begin button -->
    <Button
        android:id="@+id/begin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_background"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        android:text="@string/begin" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/begin_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
...
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        android:text="@string/rules" />

    <!-- Settings button -->
    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/baseline_settings_24"
        android:background="@drawable/button_background"
        android:contentDescription="Image button"
        tools:ignore="HardcodedText" />

</RelativeLayout>

